// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      />
      <div>
        operator
      </div>
      <div
        class="form-group-item"
      >
        <div
          aria-haspopup="true"
          class="input-group base-select-input-root select-input-root"
        >
          <div
            class="input-group-item"
          >
            <input
              autocomplete="off"
              class="input-root form-control input-group-inset input-group-inset-after"
              placeholder=""
              type="text"
              value=""
            />
            <div
              class="input-group-inset-item input-group-inset-item-after"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom icon-root"
                role="presentation"
              >
                <use
                  href="#caret-bottom"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StringInput should render with data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        Name
      </div>
      <div>
        operator
      </div>
      <div
        class="form-group-item"
      >
        <div
          aria-haspopup="true"
          class="input-group base-select-input-root select-input-root"
        >
          <div
            class="input-group-item"
          >
            <input
              autocomplete="off"
              class="input-root form-control input-group-inset input-group-inset-after"
              placeholder=""
              type="text"
              value="Test Test"
            />
            <div
              class="input-group-inset-item input-group-inset-item-after"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom icon-root"
                role="presentation"
              >
                <use
                  href="#caret-bottom"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
